Feat/auth-register: Integrate Kafka producer and implement email verification logic with UUID v7 (#9)
* feat(auth-service): Setup database connection

* feat(auth): Implement Auth Model

* feat(auth-service): Implement database migration

* fix(auth-service): remove migration files

* fix(auth-service): fix gitignore

* fix(git): ignore migration files

* fix(git): keep migration folder

* fix(git): add gitkeep

* feat(auth): Implement AutoMigration

* feat(auth-service): Implement Repository

* feat(auth-service): Implement Service and Controller for auth module

* feat(auth-service): Initial Swagger Document

* feat(auth-service): Refactor API description for Register endpoint

* feat(auth-service): Refactor User Registration endpoint

* feat/auth: Implement Kafka Producer

* refactor/auth: Refactor main go

* refactor/auth: Add slog log

* feat/auth-register: Implement Email Verification module

* feat/auth-register: Integrate Kafka producer

---------
