# services/auth-service/internal/auth/controller.go
@@ -18,12 +18,12 @@ func NewController(svc Service) *Controller {
 
 // Register godoc
 // @Summary      User Registration
-// @Description  Register a new user with email and password
+// @Description  Register a new user with email and password. The system also send a verification email to user
 // @Tags         Authentication
 // @Accept       json
 // @Produce      json
 // @Param        user  body      auth.RegisterRequest  true  "User Registration Data"
-// @Success      201   {object}  auth.AuthResponse
+// @Success      201   {object}  auth.RegisterResponse
 // @Failure      400   {object}  map[string]string
 // @Router       /auth/register [post]
 func (ctrl *Controller) Register(c *gin.Context) {
